Fixing alignment issues and responsive issues

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -270,7 +270,7 @@
 }
 @media (min-width:789px){
 	.product_img1, .product_img2, .product_img3, .product_img4, .product_img5, .product_img6 {
-    	height: 430px;
+    	height: 433px;
 	}
 }
 .footer_bg {
